FIX: CLO-19312 - Prevent illegal reflection access warnings - Reviewer: urbanj